--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <li><a href="semana1/semana1.html">Semana 1</a></li>
     <li><a href="semana2/semana2.html">Semana 2</a></li>
     <li><a href="semana3.html">Semana 3</a></li>
-    <li><a href="semana4.html">Semana 4</a></li>
+    <li><a href="semana4/semana4.html">Semana 4</a></li>
 </body>
 </html>
