--- a/semana4/atividade1.html
+++ b/semana4/atividade1.html
@@ -1,41 +1,55 @@
-    <!DOCTYPE html>
-    <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Atividade 1</title>
-    </head>
-    <body>
-        <header>
-            <h1>Formulário de Cadastro</h1>
-        </header>
-
-        <form method="get" id="formulario">
-            <label for="">Nome:</label>
-            <input type="text"></input>
-
-            <label for="">E-mail:</label>
-            <input type="text"></input>
-
-            <label for="">Data Nascimento:</label>
-            <input type="date"></input>
-
-            <label for="">Telefone Fixo:</label>
-            <input type="number"></input>
-
-            <label for="">Telefone Celular:</label>
-            <input type="number"></input>
-
-            <section id="alunoProfessor">
-                <label for="">Aluno</label>
-                <input type="radio"></input>
-
-                <label for="">Professor</label>
-                <input type="radio"></input>
+<!DOCTYPE html>
+<html lang="pt-Br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="atividade1.css">
+    <title>Atividade Classes</title>
+</head>
+<body>
+    <header>
+        <h1>Formulário de Cadastro</h1>
+    </header>
+    <form method="get">
+        <section id="formatacao">
+            <section class="input">
+                <label for="Nome">Nome: </label>
+                <Input type="text" placeholder="Digite seu Nome Completo"></Input>
             </section>
+            <section class="input">
+                <label for="Email">E-Mail:</label>
+                <Input type="text" placeholder="fulano@teste.com"></Input>
+            </section>
+        </section>
+        <section id="formatacao">
+            <section class="input">
+                <label for="data_Nasc">Data Nascimento:</label>
+                <Input type="date"></Input>
+            </section>
+            <section class="input">
+                <label for="Telefone_Fix">Telefone Fixo:</label>
+                <Input type="number" placeholder="(99)99999-9999"></Input>
+            </section>
+            <section class="input">
+                <label for="Telefone_Cel">Celular:</label>
+                <Input type="number" placeholder="(99)99999-9999"></Input>
+            </section>
+        </section> 
+        <section id="formatacao">
+            <section class="input">
+                <label for="professor">Professor:</label>
+                <input type="radio" name="opção" value="professor">
+            </section>
+            <section class="input">
+                <label for="aluno">Aluno:</label>
+                <input type="radio" name="opção" value="aluno">
+            </section>
+        </section>
 
-            <button>Enviar</button>
-        </form>
-    </body>
-    </html>
+        <div id="campos-dinamicos"></div> <section id="formatacao">
+            <input type="submit" value="Enviar">
+            <input type="submit" value="Redefinir">
+        </section>
+    </form>
+</body>
+</html>
