--- a/semana4/atividade1.html
+++ b/semana4/atividade1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="atividade1.css">
+    <script src="atividade1.js"></script>
     <title>Atividade Classes</title>
 </head>
 <body>
