--- a/semana4/atividade1.html
+++ b/semana4/atividade1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="atividade1.js"></script>
     <link rel="stylesheet" href="atividade1.css">
     <title>Atividade Classes</title>
 </head>
