--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <li><a href="semana3/semana3.html">Semana 3</a></li>
     <li><a href="semana4/semana4.html">Semana 4</a></li>
     <li><a href="semana5/semana5.html">Semana 5</a></li>
+    <li><a href="semana6/semana6.html">Semana 6</a></li>
 </body>
 </html>
