Atualização do CSS de todas semanas e algumas atividades

--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Escolha</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Laboratório de Engenharia de Software</h1>
-    <p>Aluno: Lucas Henrique Vicente dos Santos</p>
-    <p>Módulo: 5º</p>
-    <p>Período: Matutino</p>
-    <li><a href="semana1/semana1.html">Semana 1</a></li>
-    <li><a href="semana2/semana2.html">Semana 2</a></li>
-    <li><a href="semana3/semana3.html">Semana 3</a></li>
-    <li><a href="semana4/semana4.html">Semana 4</a></li>
-    <li><a href="semana5/semana5.html">Semana 5</a></li>
-    <li><a href="semana6/semana6.html">Semana 6</a></li>
+
+    <nav>
+        <ul>
+            <li><a href="semana1/semana1.html">Semana 1</a></li>
+            <li><a href="semana2/semana2.html">Semana 2</a></li>
+            <li><a href="semana3/semana3.html">Semana 3</a></li>
+            <li><a href="semana4/semana4.html">Semana 4</a></li>
+            <li><a href="semana5/semana5.html">Semana 5</a></li>
+            <li><a href="semana6/semana6.html">Semana 6</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Laboratório de Engenharia de Software</h1>
+        <p>Aluno: Lucas Henrique Vicente dos Santos</p>
+        <p>Módulo: 5º</p>
+        <p>Período: Matutino</p>
+    </main>
+
 </body>
 </html>
