--- a/semana2/semana2.html
+++ b/semana2/semana2.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="semana2.css">
     <title>Semana 2</title>
 </head>
 <body>
-    <h1>Atividades semana 2</h1>
 
-    <li><a href="atividade1.html">Atividade 1</a></li>
-    <li><a href="atividade2.html">Atividade 2</a></li>
-    <li><a href="atividade3.html">Atividade 3</a></li>
+    <nav>
+        <ul>
+            <li><a href="atividade1.html">Atividade 1</a></li>
+            <li><a href="atividade2.html">Atividade 2</a></li>
+            <li><a href="atividade3.html">Atividade 3</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Atividades Semana 2</h1>
+    </main>
+
 </body>
 </html>
