--- a/semana4/atividade1.html
+++ b/semana4/atividade1.html
@@ -15,11 +15,11 @@
         <section id="formatacao">
             <section class="input">
                 <label for="Nome">Nome: </label>
-                <Input type="text" placeholder="Digite seu Nome Completo"></Input>
+                <Input type="text"></Input>
             </section>
             <section class="input">
                 <label for="Email">E-Mail:</label>
-                <Input type="text" placeholder="fulano@teste.com"></Input>
+                <Input type="text"></Input>
             </section>
         </section>
         <section id="formatacao">
@@ -29,11 +29,11 @@
             </section>
             <section class="input">
                 <label for="Telefone_Fix">Telefone Fixo:</label>
-                <Input type="number" placeholder="(99)99999-9999"></Input>
+                <Input type="number"></Input>
             </section>
             <section class="input">
                 <label for="Telefone_Cel">Celular:</label>
-                <Input type="number" placeholder="(99)99999-9999"></Input>
+                <Input type="number"></Input>
             </section>
         </section> 
         <section id="formatacao">
