--- a/semana4/semana4.html
+++ b/semana4/semana4.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="semana4.css">
     <title>Semana 4</title>
 </head>
 <body>
-    <h1>Atividades semana 4</h1>
 
-    <li><a href="atividade1.html">Atividade 1</a></li>
+    <nav>
+        <ul>
+            <li><a href="atividade1.html">Atividade 1</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Atividade Semana 4</h1>
+    </main>
+
 </body>
 </html>
