--- a/semana5/semana5.html
+++ b/semana5/semana5.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semana 4</title>
+    <link rel="stylesheet" href="semana5.css">
+    <title>Semana 5</title>
 </head>
 <body>
-    <h1>Atividades semana 5</h1>
 
-    <li><a href="atividade1.html">Atividade 1</a></li>
+    <nav>
+        <ul>
+            <li><a href="atividade1.html">Atividade 1</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Atividades Semana 5</h1>
+    </main>
+
 </body>
 </html>
