--- a/semana1/semana1.html
+++ b/semana1/semana1.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="semana1.css">
     <title>Semana 1</title>
 </head>
 <body>
-    <h1>Atividades semana 1</h1>
 
-    <li><a href="atividade1.html">Atividade 1</a></li>
-    <li><a href="atividade2.html">Atividade 2</a></li>
-    <li><a href="atividade3.html">Atividade 3</a></li>
-    <li><a href="atividade4.html">Atividade 4</a></li>
+    <nav>
+        <ul>
+            <li><a href="atividade1.html">Atividade 1</a></li>
+            <li><a href="atividade2.html">Atividade 2</a></li>
+            <li><a href="atividade3.html">Atividade 3</a></li>
+            <li><a href="atividade4.html">Atividade 4</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Atividades Semana 1</h1>
+    </main>
+
 </body>
 </html>
