--- a/semana5/atividade1.html
+++ b/semana5/atividade1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="atividade1.css">
     <title>Contador de Pessoas</title>
 </head>
 <body>
