Atualização de algumas informações e adição do CSS nas atividades das semanas

--- a/semana2/atividade2.html
+++ b/semana2/atividade2.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="atividade2.css">
     <title>Atividade 2</title>
 </head>
 <body>
+    <div id="info">
+        <h2>Horário Atual:</h2>
+        <div id="relogio">00:00</div> 
 
-    <h2>Horário Atual:</h2>
-    <div id="relogio">00:00</div> 
-
-    <script src="atividade2.js"></script> 
+        <script src="atividade2.js"></script> 
+    </div>
 </body>
 </html>
