--- a/semana3/atividade2.html
+++ b/semana3/atividade2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario do carro</title>
+    <link rel="stylesheet" href="atividade2.css">
     <script src="atividade2.js" defer></script>
 </head>
 <body>
