--- a/semana2/atividade1.html
+++ b/semana2/atividade1.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 1</title>
+    <link rel="stylesheet" href="atividade1.css">
     <script src="atividade1.js"></script>
 </head>
 <body>
-    <script src="atividade1.js"></script>
+    <div id="info">
+        <script src="atividade1.js"></script>
+    </div>
 </body>
 </html>
