--- a/semana2/atividade3.html
+++ b/semana2/atividade3.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 3</title>
+    <link rel="stylesheet" href="atividade3.css">
     <script src="atividade3.js"></script>
 </head>
 <body> 
-    <main>
+    <div id="info">
         <h2>Verificação da palavra Palíndromo:</h2>
         <input type="text" id="entrada" >
         <button id="verif">Verificar</button>
         <p id="resultado-palindromo">Resultado:</p>
-    </main>
+    </div>
 </body>
 </html>
