--- a/semana3/atividade1.html
+++ b/semana3/atividade1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="atividade1.css">
     <script src="atividade1.js" defer></script>
     <title>Array</title>
 </head>
